// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Joystick should render correctly 1`] = `
<Joystick
  isEnabled={true}
  onPositionChange={[Function]}
>
  <div
    className="c-joystick"
    onDragOver={[Function]}
  >
    <div
      className="c-joystick__knob"
      style={
        Object {
          "left": 25,
          "top": 25,
        }
      }
    />
    <div
      className="c-joystick__drag"
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      style={
        Object {
          "left": 25,
          "top": 25,
        }
      }
    />
  </div>
</Joystick>
`;

exports[`Joystick should render correctly in disabled state 1`] = `
<Joystick
  isEnabled={false}
  onPositionChange={[Function]}
>
  <div
    className="c-joystick c-joystick--inactive"
    onDragOver={[Function]}
  >
    <div
      className="c-joystick__knob"
      style={
        Object {
          "left": 25,
          "top": 25,
        }
      }
    />
    <div
      className="c-joystick__drag"
      draggable={false}
      onDrag={[Function]}
      onDragEnd={[Function]}
      style={
        Object {
          "left": 25,
          "top": 25,
        }
      }
    />
  </div>
</Joystick>
`;
